# gemv

./: .gitignore  Makefile  Makefile.in  README.md  configure  configure.ac
src/: blas.cu  blas.hh  common.h  gen.cu  gen.hh  gpu_utils.cu  gpu_utils.hh  main.cxx  mpi_utils.cxx  mpi_utils.h  type.h
tools/: ax_check_cuda.m4
